z-index fixed Navbar

--- a/portfolio/src/components/Navbar/Header.modules.css
+++ b/portfolio/src/components/Navbar/Header.modules.css
@@ -21,6 +21,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    z-index: 99;
     
     transition: 1s ease-out;
     /* pointer-events: none; */
